log
Thu 23 May 2024 04:21:58 AM UTC: 
 tests:  0|6
total_score: 0/70
918e3d2
Thu 23 May 2024 04:25:47 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8b9ce16
Thu 23 May 2024 04:44:21 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31855d4
Thu 23 May 2024 04:46:19 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1ac653a
Thu 23 May 2024 04:51:45 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
ae5780d
Thu 23 May 2024 04:52:41 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
baec8e4
Thu 23 May 2024 04:54:12 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
22209f2
Thu 23 May 2024 04:55:12 AM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
test.c: In function ‘nextList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:99:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   99 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:90:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   90 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:77:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   77 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8164646
Thu 23 May 2024 04:57:37 AM UTC: 
 list.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
db0ba86
Thu 23 May 2024 04:57:59 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
8f5de8d
Thu 23 May 2024 04:59:13 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
4574ac1
Thu 23 May 2024 05:02:52 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ff33fa6
Thu 23 May 2024 08:40:15 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
d50872a
Thu 23 May 2024 08:45:57 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:87:22: error: expected ‘;’ before ‘}’ token
   87 |     list->head = nodo
      |                      ^
      |                      ;
   88 | }
      | ~                     
Compilation failed
40c958c
Thu 23 May 2024 08:46:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e5cff99
Thu 23 May 2024 08:50:17 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:87:26: error: expected ‘;’ before ‘}’ token
   87 |         list->head = nodo
      |                          ^
      |                          ;
   88 |     }
      |     ~                     
Compilation failed
2c3d94c
Thu 23 May 2024 08:50:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5e03016
Thu 23 May 2024 08:57:36 PM UTC: 
 list.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  9|3
total_score: 35/70
a18e65f
Thu 23 May 2024 09:01:10 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
8849c9a
Thu 23 May 2024 09:19:42 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
455fb74
Thu 23 May 2024 09:26:40 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
c2a38c5
Thu 23 May 2024 09:27:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
009fb35
